--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "node-sass": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1",
     "react-scroll": "^1.9.0",
     "sass": "^1.77.0"
   },
